# constitution-for-continuity

./: .gitignore  CONSTITUTION.md  README.md  config.yaml  config_self_critique.yaml  pyproject.toml
data/: principles.json
scripts/: 00_setup.py  01_generate_revisions.py  02_sft_qlora.py  03_generate_preferences.py  04_dpo_train.py  05_eval.py  analyze_progress.py  export_to_ollama.py
src/: constitution.py  inference.py  utils.py
